revised dask_parallel.ipynb

--- a/notebooks/dask_parallel.ipynb
+++ b/notebooks/dask_parallel.ipynb
@@ -307,6 +307,13 @@
       "File \u001b[0;32m/srv/conda/envs/notebook/lib/python3.9/site-packages/distributed/client.py:2170\u001b[0m, in \u001b[0;36mClient._gather\u001b[0;34m(self, futures, errors, direct, local_worker)\u001b[0m\n\u001b[1;32m   2168\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2169\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m exception\u001b[38;5;241m.\u001b[39mwith_traceback(traceback)\n\u001b[0;32m-> 2170\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exc\n\u001b[1;32m   2171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskip\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m   2172\u001b[0m     bad_keys\u001b[38;5;241m.\u001b[39madd(key)\n",
       "\u001b[0;31mCancelledError\u001b[0m: downscaling_mursst-8719f5e6-aa61-43e3-a96d-2400532555d2"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-02 06:47:34,520 - distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n"
+     ]
     }
    ],
    "source": [
